finished swagger docs
